# llm-serving-performance-lab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: benchmark_sweep.yaml  vllm_default.env
days/day01-vllm-setup-first-benchmark/: README.md  TASKS.md
docs/: benchmark_methodology.md  day-one-vllm-openai-server.md  results_interpretation.md  week01_benchmark_findings.md
docs/day01/: day01_runbook.md  metrics_glossary.md
rag/: README.md  sample_corpus.md  simple_retriever.py
reports/: day01_baseline.md  day01_baseline_template.md  day01_env_check.txt  day01_smoke_output.txt  day01_vllm_failure.txt  day02_benchmark.md  day03_plots.md  day04_methodology.md  day05_length_sweep.md  day06_concurrency_sweep.md  day07_week1_report.md  day08_rag_skeleton.md  day09_basic_rag_generation.md
results/day-one/logs/: smoke_chat.txt
results/day02/logs/: bench_c1_i128_o64.txt  bench_c2_i128_o64.txt  bench_c4_i128_o64.txt
results/day02/raw/: day02_c1_i128_o64.json  day02_c2_i128_o64.json  day02_c4_i128_o64.json
results/day03/: day02_summary.csv
results/day06/: day06_summary.csv
results/day06/logs/: bench_c16_i128_o64_n64.txt  (+4 more)
results/day08/: rag_smoke_output.txt
results/day09/: rag_generate_output.json  rag_generation_output.txt
scripts/: check_env.py  parse_day02_results.py  parse_day06_results.py  plot_day02_results.py  plot_day06_results.py  run_day02_bench.sh  run_day05_length_sweep.sh  run_day06_concurrency_sweep.sh  run_day08_rag_smoke.py  run_day09_rag_generate.py  smoke_chat.py  start_vllm_day1.sh  test_openai_client_day1.py
(+11 files in other folders)
