[project]
name = "llm-inference-prod"
version = "0.1.0"
description = "Production-grade LLM inference gateway, telemetry, and benchmarking system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 100